added particle options as a background effect

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,12 @@ body {
   padding: 0;
   background: linear-gradient(to left, rgba(7,27,82,1) 0%, rgba(0,128,128,1) 100%); /* w3c */
 }
+
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
