--- a/src/atoms/card.css
+++ b/src/atoms/card.css
@@ -1,3 +1,11 @@
-.m-card-width {
+.a-card-width {
     width: 20rem;
 }
+
+.a-card-hover:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    z-index: 1;
+    transition: transform .4s ease-in-out;
+    border-color: red;
+    }
