minor CSS changes for alignment consistency

--- a/src/molecules/card.css
+++ b/src/molecules/card.css
@@ -1,8 +1,8 @@
-.a-card-width {
+.m-card-width {
     width: 20rem;
 }
 
-.a-card-hover:hover {
+.m-card-hover:hover {
     cursor: pointer;
     transform: scale(1.05);
     z-index: 1;
