--- a/src/molecules/card.css
+++ b/src/molecules/card.css
@@ -1,6 +1,15 @@
 .m-card-width {
-    width: 16.5rem;
-    max-width: 47%;
+        width: 47%;}
+.m-cardimg-height {
+        height: auto;
+        min-height: 18.5rem;}
+
+@media (min-width: 576px) {
+    .m-card-width {
+        width: 16rem;}
+    .m-cardimg-height {
+        height: 24rem;
+        min-height: 24rem;}
 }
 
 .m-card-hover:hover {
