--- a/src/molecules/card.scss
+++ b/src/molecules/card.scss
@@ -1,3 +1,5 @@
+@import "../styles/index.scss";
+
 .m-card-width {
         width: 47%;}
 .m-cardimg-height {
@@ -18,4 +20,12 @@
     z-index: 1;
     transition: transform .4s ease-in-out;
     border-color: red;
+}
+
+.m-cardhyperLink-color {
+    color: #00b9ff;
+    background-color: transparent;
+    text-decoration-line: underline;
+    font-style: italic;
+    &:hover {color: $primary;}
 }
